syntax = "proto3";

import "Shared/Protos/search.proto";

package StockApi;

service Stock {
    rpc Get (GetStockQuery) returns (StockResponse) {}
    rpc GetAll (GetStocksQuery) returns (StocksResponse) {}
}

message GetStockQuery {
    string id = 1;
}

message GetStocksQuery {
    SearchLibrary.SearchOptions search = 1;
}

message StocksResponse {
    repeated StockResponse stocks = 1;
    int64 totalCount = 2;
}

message StockResponse {
    string id = 1;
    string symbol = 2;
    string name = 3;
    string exchange = 4;
    string type = 5;
    string currency = 6;
    StockStatisticsResponse stockStatistics = 7;
}

message StockStatisticsResponse {
    double currentPrice = 1;
    string retrievalDateTime = 2;
    double earningsPerShare = 3;
    double beta = 4;
    double marketCapitalization = 5;
    double dividendYield = 6;
    double priceToBookValue = 7;
    double priceToEarningsValue = 8;
    double priceToSalesValue = 9;
    string logo = 10;
}